@@ -813,6 +813,13 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|iwConf
+operator|.
+name|setUseCompoundFile
+argument_list|(
+name|isCompound
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|mergePolicy
@@ -832,15 +839,9 @@ name|iwConf
 operator|.
 name|setMergePolicy
 argument_list|(
-name|isCompound
-condition|?
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
-else|:
-name|NoMergePolicy
-operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 expr_stmt|;
 block|}
