@@ -3951,15 +3951,9 @@ name|conf
 operator|.
 name|setMergePolicy
 argument_list|(
-name|doCFS
-condition|?
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
-else|:
-name|NoMergePolicy
-operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 expr_stmt|;
