@@ -239,7 +239,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -330,7 +330,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -769,7 +769,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -853,7 +853,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -989,7 +989,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1217,7 +1217,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1369,19 +1369,9 @@ argument_list|)
 operator|.
 name|setMergePolicy
 argument_list|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|?
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
-else|:
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1589,19 +1579,9 @@ argument_list|)
 operator|.
 name|setMergePolicy
 argument_list|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|?
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
-else|:
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1889,19 +1869,9 @@ argument_list|)
 operator|.
 name|setMergePolicy
 argument_list|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|?
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
-else|:
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 argument_list|)
 decl_stmt|;
