@@ -895,37 +895,15 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// no merging
-if|if
-condition|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|)
-block|{
 name|iwc
 operator|.
 name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|iwc
-operator|.
-name|setMergePolicy
-argument_list|(
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
-argument_list|)
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|VERBOSE
@@ -1666,37 +1644,15 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// no merging
-if|if
-condition|(
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
-condition|)
-block|{
 name|iwc
 operator|.
 name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|iwc
-operator|.
-name|setMergePolicy
-argument_list|(
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
-argument_list|)
-expr_stmt|;
-block|}
 name|IndexWriter
 name|writer
 init|=
@@ -6764,7 +6720,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 expr_stmt|;
 comment|// prevent merges from getting in the way
