@@ -109,7 +109,7 @@ name|mp
 init|=
 name|NoMergePolicy
 operator|.
-name|NO_COMPOUND_FILES
+name|INSTANCE
 decl_stmt|;
 name|assertNull
 argument_list|(
@@ -150,61 +150,10 @@ literal|null
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertFalse
-argument_list|(
-name|mp
-operator|.
-name|useCompoundFile
-argument_list|(
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-expr_stmt|;
 name|mp
 operator|.
 name|close
 argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Test
-DECL|method|testCompoundFiles
-specifier|public
-name|void
-name|testCompoundFiles
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|assertFalse
-argument_list|(
-name|NoMergePolicy
-operator|.
-name|NO_COMPOUND_FILES
-operator|.
-name|useCompoundFile
-argument_list|(
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|NoMergePolicy
-operator|.
-name|COMPOUND_FILES
-operator|.
-name|useCompoundFile
-argument_list|(
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
 expr_stmt|;
 block|}
 annotation|@
