@@ -4679,7 +4679,7 @@ name|setMergePolicy
 argument_list|(
 name|NoMergePolicy
 operator|.
-name|COMPOUND_FILES
+name|INSTANCE
 argument_list|)
 expr_stmt|;
 comment|// prevent merges
