@@ -114,6 +114,9 @@ API Changes
   deprecated and will be removed in Lucene 5.0.  (Uwe Schindler,
   Robert Muir)
 
+* LUCENE-5633: Change NoMergePolicy to a singleton with no distinction between
+  compound and non-compound types. (Shai Erera)
+
 Optimizations
 
 * LUCENE-5603: hunspell stemmer more efficiently strips prefixes
